--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,5 @@
     "suggest": {
         "illuminate/support": "Required to use with Laravel Framework (~5.3)."
     },
-    "minimum-stability": "dev",
-    "prefer-stable": true
+    "minimum-stability": "dev"
 }
